fixes header dropdown horizontal scrolling issue

--- a/styles/Header.module.css
+++ b/styles/Header.module.css
@@ -142,7 +142,7 @@
   display: flex;
   flex-flow: column wrap;
   position: absolute;
-  min-width: 30vw;
+  min-width: 18vw;
 }
 
 .issueContentOpen > button {
